libs/preprocessor/tests/errors/pe11_expected_function_or_value/stderr.ansi
[31m[PE11] Error:[0m expected function or value, found unit
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:3:12[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;201mH[0m[38;5;201mE[0m[38;5;201mL[0m[38;5;201mL[0m[38;5;201mO[0m
 [38;5;240m  │[0m         [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m           [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m defined as a unit here
 [38;5;240m  │[0m 
 [38;5;246m3 │[0m [38;5;249mg[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;201mH[0m[38;5;201mE[0m[38;5;201mL[0m[38;5;201mL[0m[38;5;201mO[0m[38;5;249m([0m[38;5;249mw[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249ml[0m[38;5;249md[0m[38;5;249m)[0m[38;5;249m;[0m
 [38;5;240m  │[0m            [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m              [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m tried to use as a function
[38;5;246m───╯[0m
